Revision history for {{$dist->name}}

{{$NEXT}}

0.01034   2018-02-21 16:03:21Z
          - Add support for the Github markdown API (GH#205) (JosJoaqu Atria)
          - Add .mailmap file (GH#206) (JosJoaqu Atria)
          - Add issues() and pull_requestions() methods to Pithub::Repos.
            (GH#201) (JosJoaqu Atria)
          - Add a rate_limit method to base (GH#204) (JosJoaqu Atria)
          - CPANTS fixes (PRC) (GH#200) (JosJoaqu Atria)

0.01033   2016-01-22 17:54:52-05:00 America/Toronto
          - Bump minimum version of JSON::MaybeXS to 1.003003 (Slaven Rezić and
            Zoffix Znet)

0.01032   2016-01-13 22:21:12-05:00 America/Toronto
          - Pass utf8 option to child instances (Ichinose Shogo)

0.01031   2016-01-11 23:35:23-05:00 America/Toronto
          - Add disabling utf8 as a constructor option (Ichinose Shogo)
          - Pod fixes (Ivan Bessarabov and Zoffix Znet)

0.01030   2015-10-18 21:32:29-04:00 America/Toronto
          - Add add/remove team membership API (SUZUKI Masashi)
          - Handle unicode when en/de-coding json (Randy Stauner)

0.01029   2015-07-07 10:35:24-04:00 America/Toronto
          - Document the URL required for connecting to a GitHub Enterprise
            instance.
          - Add Pithub::SearchV3, which gives you the option to use the v3
            search rather than the current default of legacy (Florian Ragwitz)

0.01028   2014-11-19 16:50:32-08:00 America/Los_Angeles
          - #178 Fixed the minimum version of Moo.
          - #176 Using JSON::MaybeXS instead of JSON to allow
            alternatives to JSON::XS such as Cpanel::JSON::XS.
          - #177 Using Path::Tiny instead of File::Slurp to simplify file
            access and avoid File::Slurp unicode bugs.
          - #175 Now using Github for issue tracking.

0.01027   2014-11-04 10:55:03-08:00 America/Los_Angeles
          - Forgot to update the change log last release.

0.01026   2014-11-04 10:28:22-08:00 America/Los_Angeles