@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - Implement new issues assignee api
 
 0.01034   2018-02-21 16:03:21Z
           - Add support for the Github markdown API (GH#205) (JosJoaqu Atria)
